--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Viz Omniverse Test Group
 description: 2023 TAMU Visualization
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/TAMU-Viz-Omniverse-Test-Group/tamu-viz-omniverse-test-group.github.io/blob/master/images/viz-Logo.png
 
 #
 # Flags below are optional
