--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Viz Omniverse Test Group
+name: Viz Omniverse
 
 # Short bio or description (displayed in the header)
-description: 2023 TAMU Visualization
+description: 2023 TAMU Visualization Omniverse Test Group
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/TAMU-Viz-Omniverse-Test-Group/tamu-viz-omniverse-test-group.github.io/blob/master/images/viz-Logo.png
