--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Viz Omniverse
 description: 2023 TAMU Visualization Omniverse Test Group
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/TAMU-Viz-Omniverse-Test-Group/tamu-viz-omniverse-test-group.github.io/images/viz-Logo.png
+avatar: https://user-images.githubusercontent.com/75686288/234862000-f461cdbb-b7a5-4b24-9424-594e35553ec5.png
 
 #
 # Flags below are optional
